[package]
name = "biomeos-graph"
version = "0.1.0"
edition.workspace = true
description = "Type-safe ingestion layer for Neural API deployment graphs"
license.workspace = true
rust-version.workspace = true
repository = "https://github.com/ecoPrimals/biomeOS"
keywords = ["biomeOS", "graph", "deployment", "toml"]
categories = ["config"]

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async & Events (for events.rs GraphEventBroadcaster)
tokio = { workspace = true, features = ["test-util"] }
chrono = { workspace = true }
tracing = { workspace = true }

# POSIX syscall wrappers (safe Rust, signal handling for process management)
rustix = { workspace = true, features = ["process"] }

# Metrics storage (Pure Rust, ecoBin compliant)
redb = { workspace = true }

# biomeOS internal crates
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }
biomeos-nucleus = { path = "../biomeos-nucleus", version = "0.1.0" }

[dev-dependencies]
# Testing
tempfile = { workspace = true }

[features]
default = []

# Enable async execution
async = []

[lints]
workspace = true
