[package]
name = "biomeos-kernel"
version = "0.1.0"
edition = "2021"
authors = ["biomeOS Contributors"]
description = "Kernel abstraction layer for biomeOS - provides OS-level services and hardware management"
license = "Apache-2.0"
repository = "https://github.com/biomeOS/biomeOS"

[dependencies]
biomeos-core = { path = "../biomeos-core" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
systemstat = "0.2"
nix = "0.27"
libc = "0.2"
procfs = "0.16"
sys-info = "0.9"
neli = "0.6"
rtnetlink = "0.13"
netlink-packet-route = "0.17"
syslog = "6.1"
users = "0.11"

[dev-dependencies]
tempfile = "3.0" 