[package]
name = "biomeos-manifest"
version = "0.1.0"
edition = "2021"
authors = ["biomeOS Team"]
description = "Manifest management utilities for biomeOS using the unified type system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/biomeos"

[dependencies]
# Unified types from biomeos ecosystem
biomeos-types = { path = "../biomeos-types" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"

# File I/O and path utilities
# (using std library - no external dependency needed)

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
