[package]
name = "biomeos-manifest"
version = "0.1.0"
edition.workspace = true
authors = ["biomeOS Team"]
description = "Manifest management utilities for biomeOS using the unified type system"
license = "AGPL-3.0-only"
repository = "https://github.com/your-org/biomeos"

[dependencies]
# Unified types from biomeos ecosystem
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = { workspace = true }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = { workspace = true }

# File I/O and path utilities
# (using std library - no external dependency needed)

[dev-dependencies]
tempfile = "3.8"

[features]
default = []

[lints]
workspace = true
