[package]
name = "biomeos-manifest"
version = "0.1.0"
edition.workspace = true
authors = ["biomeOS Team"]
description = "Manifest management utilities for biomeOS using the unified type system"
license.workspace = true
rust-version.workspace = true
repository = "https://github.com/your-org/biomeos"

[dependencies]
# Unified types from biomeos ecosystem
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }

# Serialization
serde = { workspace = true }
serde_yaml.workspace = true
serde_json = { workspace = true }
toml = { workspace = true }

# Date/time handling
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# File I/O and path utilities
# (using std library - no external dependency needed)

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []

[lints]
workspace = true
