[package]
name = "biomeos-niche"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "AGPL-3.0-only"
description = "Niche (biome) system for BiomeOS - environments where primals and chimeras operate"

[dependencies]
# Core BiomeOS types
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }
biomeos-chimera = { path = "../biomeos-chimera", version = "0.1.0" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
walkdir = { workspace = true }

# Process management
which = "6"
rustix = { version = "0.38", features = ["process"] }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

