[package]
name = "biomeos-niche"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Niche (biome) system for BiomeOS - environments where primals and chimeras operate"

[dependencies]
# Core BiomeOS types
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }
biomeos-chimera = { path = "../biomeos-chimera", version = "0.1.0" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }

# Process management
which = { workspace = true }
rustix = { workspace = true, features = ["process"] }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }


[lints]
workspace = true
