[package]
name = "biomeos-nucleus"
version.workspace = true
edition.workspace = true
authors = ["ecoPrimals Project"]
description = "Secure Primal Discovery Protocol (NUCLEUS) for biomeOS"
license.workspace = true
rust-version.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Cryptography (for verification, not implementation)
ed25519-dalek = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# Unix socket client
tokio-serde = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }

# biomeOS dependencies
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }

[dev-dependencies]
biomeos-test-utils = { path = "../biomeos-test-utils", version = "0.1.0" }
tokio-test = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
# For testing without real primals (capability-based mocks, isolated to tests)
test-utils = []

[lints]
workspace = true
