[package]
name = "biomeos-primal-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Universal SDK for creating biomeOS Primals"

[dependencies]
# biomeOS unified types
biomeos-types = { path = "../biomeos-types" }

# Core async and serialization
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = "0.3"

# Tokio for async runtime
tokio = { workspace = true }

# tarpc for high-performance binary RPC (protocol escalation)
tarpc = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
