[package]
name = "biomeos-primal-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "AGPL-3.0-only"
description = "Universal SDK for creating biomeOS Primals"

[dependencies]
# biomeOS unified types
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }

# Core async and serialization
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = "0.3"

# Tokio for async runtime
tokio = { workspace = true }

# tarpc for high-performance binary RPC (protocol escalation)
tarpc = { workspace = true }
tokio-serde = { workspace = true }

# Error handling
thiserror = "1.0"

# Tracing
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
