[package]
name = "biomeos-primal-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Universal SDK for creating biomeOS Primals"

[dependencies]
# biomeOS unified types
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }

# Core async and serialization
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

# Tokio for async runtime
tokio = { workspace = true, features = ["net", "io-util", "fs"] }

# tarpc for high-performance binary RPC (protocol escalation)
tarpc = { workspace = true }

# Zero-copy IPC payloads (wateringHole guidelines)
bytes = { workspace = true }
tokio-serde = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
biomeos-test-utils = { path = "../biomeos-test-utils", version = "0.1.0" }
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }

[lints]
workspace = true
