[package]
name = "biomeos-pseudospore"
description = "pseudoSpore envelope validation for biomeOS NUCLEUS gateway (NC-1.4)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
